<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@drawable/bg6"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_tentangtoko"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Tentang Toko"
        android:textSize="20dp"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintTop_toBottomOf="@id/timricis"/>

    <ImageView
        android:id="@+id/timricis"
        android:src="@drawable/timriciss"
        android:layout_width="match_parent"
        android:layout_height="90dp"/>

    <TextView
        android:id="@+id/tentangricis"
        app:layout_constraintTop_toBottomOf="@id/text_tentangtoko"
        android:layout_marginTop="40dp"
        android:text="@string/tentangricis"
        android:background="@color/bgtentang2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tentangwildan"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tentangricis"
        android:text="@string/tentangwildan"
        android:background="@color/bgtentang"
        android:textSize="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tentangvazo"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tentangwildan"
        android:text="@string/tentangvazo"
        android:background="@color/bgtentang2"
        android:textSize="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_aryesh"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tentangvazo"
        android:text="@string/tentangaryesh"
        android:background="@color/bgtentang"
        android:textSize="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_derry"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/text_aryesh"
        android:text="@string/tentangderry"
        android:background="@color/bgtentang2"
        android:textSize="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>